# Autogen_MCP

./: .dockerignore  .env.example  .gitignore  .mcprc.json  Dockerfile  ENHANCEMENT_SUMMARY.md  MODERNIZATION_SUMMARY.md  README.md  cli_example.py  config.json.example  demo_enhanced_features.py  mcp-manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  smithery.yaml  test_enhanced_server.py  test_sse_client.py  tsconfig.json
src/: .env.example  enhanced_index.ts  index.ts  index.ts.bak  index_fixed.ts
src/autogen_mcp/: __init__.py  agents.py  config.py  server.py  server_modern.py  server_old.py  workflows.py  workflows_old.py
