[project]
name = "autogen-mcp"
version = "0.1.0"
description = "MCP server for AutoGen integration"
dependencies = [
    "mcp>=1.9.4",
    "pyautogen>=0.9.0",
    "pydantic>=2.0.0"
]

[project.scripts]
autogen-mcp = "autogen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
